--- a/PreciousGame.Verot.Morin.Console/Console.csproj
+++ b/PreciousGame.Verot.Morin.Console/Console.csproj
@@ -49,5 +49,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PreciousGame.Verot.Morin.Infrastructure\Infrastructure.csproj">
+      <Project>{49b0a394-11ff-4ac0-82fb-9e73191e3f0c}</Project>
+      <Name>Infrastructure</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
