BDD emplacement stratégique

--- a/PreciousGame.Verot.Morin.Console/App.config
+++ b/PreciousGame.Verot.Morin.Console/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
   <connectionStrings>
-    <add name="PreciousGameContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=U:\csharp\project\lp-dotnet-project\PreciousGame.Verot.Morin.Infrastructure\PreciousGame.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="PreciousGameContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\App_Data\PreciousGame.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <providers>
