--- a/PreciousGame.Verot.Morin.Console/Console.csproj
+++ b/PreciousGame.Verot.Morin.Console/Console.csproj
@@ -76,9 +76,13 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\PreciousGame.Verot.Morin.Infrastructure\Infrastructure.csproj">
-      <Project>{49b0a394-11ff-4ac0-82fb-9e73191e3f0c}</Project>
-      <Name>Infrastructure</Name>
+    <ProjectReference Include="..\PreciousGame.Verot.Morin.BusinessLayer\PreciousGame.Verot.Morin.BusinessLayer.csproj">
+      <Project>{F08AECC9-F82C-49EC-A93B-F0E3F90AA52A}</Project>
+      <Name>PreciousGame.Verot.Morin.BusinessLayer</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\PreciousGame.Verot.Morin.Infrastructure\Models.csproj">
+      <Project>{49B0A394-11FF-4AC0-82FB-9E73191E3F0C}</Project>
+      <Name>Models</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
@@ -94,15 +98,6 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup />
-  <ItemGroup>
-    <Content Include="App_Data\PreciousGame.mdf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="App_Data\PreciousGame_log.ldf">
-      <DependentUpon>PreciousGame.mdf</DependentUpon>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
