--- a/Console/App.config
+++ b/Console/App.config
@@ -9,7 +9,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
   <connectionStrings>
-    <add name="PreciousGameContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\App_Data\PreciousGame.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="PreciousGameContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\PreciousGame.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <providers>
