--- a/Infrastructure/BusinessLayer/BusinessLayer.csproj
+++ b/Infrastructure/BusinessLayer/BusinessLayer.csproj
@@ -51,7 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Managers\Manager.cs" />
+    <Compile Include="Managers\BusinessManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\GamesQuery.cs" />
   </ItemGroup>
