--- a/Desktop/Desktop.csproj
+++ b/Desktop/Desktop.csproj
@@ -70,6 +70,9 @@
     <Compile Include="ViewModels\HomeViewModel.cs" />
     <Compile Include="ViewModels\GameDetailsViewModel.cs" />
     <Compile Include="ViewModels\GameListViewModel.cs" />
+    <Compile Include="Views\GameDetails.xaml.cs">
+      <DependentUpon>GameDetails.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\GameKind.xaml.cs">
       <DependentUpon>GameKind.xaml</DependentUpon>
     </Compile>
