--- a/Infrastructure/BusinessLayer/BusinessLayer.csproj
+++ b/Infrastructure/BusinessLayer/BusinessLayer.csproj
@@ -51,9 +51,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Exceptions\EntityNotFoundException.cs" />
     <Compile Include="Managers\BusinessManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Queries\GamesQuery.cs" />
+    <Compile Include="Queries\Common\BaseEntityQueries.cs" />
+    <Compile Include="Queries\EditorsQueries.cs" />
+    <Compile Include="Queries\KindsQueries.cs" />
+    <Compile Include="Queries\GamesQueries.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -68,6 +72,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
