--- a/Desktop/Desktop.csproj
+++ b/Desktop/Desktop.csproj
@@ -66,6 +66,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ViewModels\Common\BaseViewModel.cs" />
+    <Compile Include="ViewModels\Common\RelayCommand.cs" />
     <Compile Include="ViewModels\GameEditorViewModel.cs" />
     <Compile Include="ViewModels\GameEvaluationViewModel.cs" />
     <Compile Include="ViewModels\GameExperienceViewModel.cs" />
