--- a/Desktop/Desktop.csproj
+++ b/Desktop/Desktop.csproj
@@ -7,7 +7,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{07788B65-439C-422E-9D44-4730AA0AC0F2}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Desktop</RootNamespace>
+    <RootNamespace>VerotMorin.PreciousGames.Desktop</RootNamespace>
     <AssemblyName>Desktop</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -93,6 +93,9 @@
     <Compile Include="ViewModels\GameEvaluationViewModel.cs" />
     <Compile Include="ViewModels\GameExperienceViewModel.cs" />
     <Compile Include="ViewModels\GameDetailsViewModel.cs" />
+    <Compile Include="Views\AddGameWindow.xaml.cs">
+      <DependentUpon>AddGameWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\GameDetails.xaml.cs">
       <DependentUpon>GameDetails.xaml</DependentUpon>
     </Compile>
@@ -117,9 +120,6 @@
     <Compile Include="Views\GameList.xaml.cs">
       <DependentUpon>GameList.xaml</DependentUpon>
     </Compile>
-    <Compile Include="AddGameWindow.xaml.cs">
-      <DependentUpon>AddGameWindow.xaml</DependentUpon>
-    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -132,6 +132,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\AddGameWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\GameDetails.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -157,10 +161,6 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\GameList.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="AddGameWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
