--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -140,6 +140,8 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\GameModels\GameEditionViewModel.cs" />
+    <Compile Include="Models\EvaluationModels\EvaluationViewModel.cs" />
+    <Compile Include="Models\EvaluationModels\IndexViewModel.cs" />
     <Compile Include="Models\GameModels\GameViewModel.cs" />
     <Compile Include="Models\GameModels\IndexViewModel.cs" />
     <Compile Include="Models\EditorModels\EditorViewModel.cs" />
@@ -324,11 +326,12 @@
     <Content Include="Views\Game\Delete.cshtml" />
     <Content Include="Views\Game\Details.cshtml" />
     <Content Include="Views\Game\Edit.cshtml" />
+    <Content Include="Views\Evaluation\Index.cshtml" />
+    <Content Include="Views\Evaluation\Details.cshtml" />
     <None Include="Web.config.template" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Evaluation\" />
     <Folder Include="Views\Experience\" />
   </ItemGroup>
   <ItemGroup>
