--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -139,10 +139,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\GameModels\GameEditionViewModel.cs" />
+    <Compile Include="Models\GameModels\GameCreateViewModel.cs" />
     <Compile Include="Models\EvaluationModels\EvaluationViewModel.cs" />
     <Compile Include="Models\EvaluationModels\IndexViewModel.cs" />
     <Compile Include="Models\GameModels\GameViewModel.cs" />
+    <Compile Include="Models\GameModels\GameViewModelFull.cs" />
     <Compile Include="Models\GameModels\IndexViewModel.cs" />
     <Compile Include="Models\EditorModels\EditorViewModel.cs" />
     <Compile Include="Models\EditorModels\IndexViewModel.cs" />
@@ -325,9 +326,9 @@
     <Content Include="Views\Game\Create.cshtml" />
     <Content Include="Views\Game\Delete.cshtml" />
     <Content Include="Views\Game\Details.cshtml" />
-    <Content Include="Views\Game\Edit.cshtml" />
     <Content Include="Views\Evaluation\Index.cshtml" />
     <Content Include="Views\Evaluation\Details.cshtml" />
+    <Content Include="Views\Game\Edit.cshtml" />
     <None Include="Web.config.template" />
   </ItemGroup>
   <ItemGroup>
