--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -144,6 +144,8 @@
     <Compile Include="Models\GameModels\IndexViewModel.cs" />
     <Compile Include="Models\EditorModels\EditorViewModel.cs" />
     <Compile Include="Models\EditorModels\IndexViewModel.cs" />
+    <Compile Include="Models\HomeModels\IndexViewModel.cs" />
+    <Compile Include="Models\HomeModels\HomeViewModel.cs" />
     <Compile Include="Models\KindModels\IndexViewModel.cs" />
     <Compile Include="Models\KindModels\KindViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
