--- a/Infrastructure/BusinessLayer/BusinessLayer.csproj
+++ b/Infrastructure/BusinessLayer/BusinessLayer.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\Common\BaseEntityQueries.cs" />
     <Compile Include="Queries\EditorsQueries.cs" />
+    <Compile Include="Queries\EvaluationsQueries .cs" />
     <Compile Include="Queries\KindsQueries.cs" />
     <Compile Include="Queries\GamesQueries.cs" />
   </ItemGroup>
