le clou du spectacle

--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -339,6 +339,8 @@
     <Content Include="Views\Editor\Edit.cshtml" />
     <Content Include="Views\Experience\Create.cshtml" />
     <Content Include="Views\Experience\Details.cshtml" />
+    <Content Include="Views\Experience\Edit.cshtml" />
+    <Content Include="Views\Experience\Delete.cshtml" />
     <None Include="Web.config.template" />
   </ItemGroup>
   <ItemGroup>
